# eli_blog

./: .gitignore  .nojekyll  _quarto.yml  eli_blog.Rproj  index.html  index.qmd  presentations.qmd  pyproject.toml  sitemap.xml
_freeze/posts/csv_chunks/index/execute-results/: html.json
_freeze/posts/data_table_joins/index/execute-results/: html.json
_freeze/posts/local_git/index/execute-results/: html.json
_freeze/posts/post-with-code/index/execute-results/: html.json
_freeze/posts/web_scraper/index/execute-results/: html.json
_site/: blog.html  listings.json  presentations.html  robots.txt  search.json  sitemap.xml
_site/posts/csv_chunks/: index.html
_site/posts/data_table_joins/: index.html
_site/posts/local_git/: index.html
_site/posts/post-with-code/: index.html
_site/posts/web_scraper/: index.html
_site/posts/welcome/: index.html
_site/posts/yemen/: index.html
_site/presentations/aapor/: index.html
_site/presentations/graphical_testing/: index.html
_site/presentations/pa_presentation/: index.html
posts/: _metadata.yml
posts/csv_chunks/: index.qmd
posts/data_table_joins/: index.qmd
posts/local_git/: index.qmd
posts/web_scraper/: index.qmd
posts/web_scraper/processed/: embeddings.csv  scraped.csv
posts/yemen/: index.qmd
presentations/aapor/: index.qmd
presentations/graphical_testing/: index.qmd
presentations/hei/: index.html  index.qmd
presentations/os_crossover/: index.html  index.qmd
presentations/pa_presentation/: index.qmd
